ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MissingTokens/parserMissingToken2/input.ts.stderr
error: Unterminated regexp literal
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MissingTokens/parserMissingToken2/input.ts:1:1
  |
1 | / b;
  | ^^^^

